Updated files paths

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,8 +6,9 @@ spring.profile.active=prod
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+#/target/classes/
 #File path
-json.pub.path=/data/maboke.pub.json
-json.file.path=/data/maboke.serie.json
-json.serie.path=/data/maboke.serie.json
-json.gvideo.path=/data/maboke.gvideo.json
+json.pub.path=/target/classes/maboke.pub.json
+json.file.path=/target/classes/maboke.serie.json
+json.serie.path=/target/classes/maboke.serie.json
+json.gvideo.path=/target/classes/maboke.gvideo.json
